added percentage of improvement

--- a/notebooks/xg_Rain.ipynb
+++ b/notebooks/xg_Rain.ipynb
@@ -1634,7 +1634,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "> The final model accuracy is `0.8357` and null accuracy is `0.7755`, so our model is doing a very good job in predicting the class labels."
+        "> The final model accuracy is `0.8357` and null accuracy is `0.7755`, so our model is doing a very good job in predicting the class labels.\n",
+        "\n",
+        "> The percentage of imporvemont in accuracy: `7.76%`"
       ]
     },
     {
